[package]
name = "include_assets_encode"
version = "0.1.0"
edition = "2021"
description = "use include_assets instead of this"
license = "LGPL-3.0-only"

[lib]
proc-macro = true

[features]
default = []

deflate = ["include_assets_decode/deflate"]
lz4 = ["include_assets_decode/lz4"]
zstd = ["include_assets_decode/zstd"]

[dependencies]
anyhow = "1.0.93"
include_assets_decode = { path = "../include_assets_decode", version = "0.1.0" }
proc-macro2 = "1.0.92"
quote = "1.0.37"
smartstring = "1.0.1"
syn = { version = "2.0.90", features = ["full"] }
thiserror = "1.0.69"
ignore = "0.4.23"
